--- a/pactice-operation/index.html
+++ b/pactice-operation/index.html
@@ -8,6 +8,7 @@
 
 
 <input type="text" id="input1" class="num">
+
 <input type="text" id="input2" class="num">
 <input type="text" id="input3" class="num">
 <br><br>
@@ -18,6 +19,7 @@
 <p>4</p>
 <p>4</p>
 <p>44</p>
+<input type="submit" value="Go!" id="submit">
 
 <a href="index.html">111</a>
 <a href="index.html">222</a>
@@ -379,14 +381,53 @@
 
 
     //     Урок #2
+
     //     Дан инпут. В него вводится число. По потери фокуса проверьте, что в нем лежит число от 1 до 100.
     //     Если это так - покрасьте инпут в зеленый цвет, а если не так - в красный.
     //
+    // firstInput.addEventListener("blur", function () {
+    //     var value = firstInput.value;
+    //
+    //     if (value > 0 && value <= 100) {
+    //
+    //         firstInput.style.borderColor = 'green';
+    //
+    //     } else {
+    //
+    //         firstInput.style.borderColor = 'red';
+    //
+    //     }
+    // });
 
     //     Дан инпут. Выделите любой текст на странице. По окончанию выделения этот текст должен записаться в этот инпут.
     //
+    // window.addEventListener("click", function () {
+    //     firstInput.value = window.getSelection()
+    // })
+
     //     Даны абзацы с числами. По нажатию на кнопку найдите абзац, в котором хранится максимальное число, и сделайте его красного цвета.
     //
+    submit.addEventListener("click", function () {
+
+
+        for (var i = 0; i <= p.length; i++) {
+            var number = i;
+            if (parseInt(p[i + 1]) > parseInt(p[i])) {
+console.log(p)
+                number = i + 1;
+
+
+            } else {
+
+                number = i;
+
+            }
+            console.log(content);
+        }
+
+        console.log(number);
+        // p[number].color = 'red';
+    })
     //     Дан инпут. Даны абзацы. Пусть в этот инпут записывается суммарное количество нажатий по этим абзацам.
     //
     //     Дан инпут с числом. Сделайте так, чтобы каждую секунду в нем появлялся квадрат того числа, которое в нем записано.
@@ -436,7 +477,8 @@
     //     Урок #4
     //     В инпут через запятую вводятся страны. По нажатию на кнопку сделайте так, чтобы эти страны записались в ul под инпутом (каждая страна отдельный li).
     //
-    //     В инпут вводится страна и нажимается Enter. По нажатию на Enter сделайте так, чтобы введенные страны записывались в абзац под инпутом через запятую. То есть по каждому нажатию Enter в абзац будут добавляться все новые и новые страны.
+    //     В инпут вводится страна и нажимается Enter. По нажатию на Enter сделайте так, чтобы введенные страны записывались в абзац под инпутом через запятую.
+    //     То есть по каждому нажатию Enter в абзац будут добавляться все новые и новые страны.
     //
     //
     //     На странице есть дивы. В них есть текст. Обойдите все дивы и обрежьте тот текст, который в них стоит так, чтобы он стал длиной 10 символов. И добавьте троеточие в конец обрезанного текста
@@ -455,18 +497,22 @@
     //     Реализуйте раскрывающийся список. По умолчанию есть список стран (ul), по нажатию на страну внутри li со страной появляется список городов.
     //
     //     Урок #5
-    //     Даны два селекта. В первом находятся страны, во втором - города. Сделайте так, чтобы когда выбирается определенная страна - в другом селекте появлялись города этой страны. В абзац ниже пишите выбранную страну и город через запятую.
+    //     Даны два селекта. В первом находятся страны, во втором - города. Сделайте так, чтобы когда выбирается определенная страна - в другом селекте появлялись города этой страны.
+    //     В абзац ниже пишите выбранную страну и город через запятую.
     //
     //
-    //     Сделайте селекты день, мес, год. Сделайте так, чтобы не корректную дату нельзя было выбрать (например, 30 февраля нельзя, а 30 марта можно или 29 февраля можно, но только в високосный год).
+    //     Сделайте селекты день, мес, год. Сделайте так, чтобы не корректную дату нельзя было выбрать (например, 30 февраля нельзя,
+    //     а 30 марта можно или 29 февраля можно, но только в високосный год).
     //
-    //     Реализуйте калькулятор валют. Есть два селекта - селект с исходной валюты, селект с той валютой, в которую мы хотим перевести деньги, инпут, в который вводится сумма для обмена. Курсы валют храните в массиве.
+    //     Реализуйте калькулятор валют. Есть два селекта - селект с исходной валюты, селект с той валютой,
+    //     в которую мы хотим перевести деньги, инпут, в который вводится сумма для обмена. Курсы валют храните в массиве.
     //     Сделайте так, чтобы в селектах нельзя было выбрать две одинаковых валюты.
     //
     //     Реализуйте генератор таблиц, ширина и высота таблиц задается в двух инпутах (например, таблица 5 на 10 ячеек).
     //
     //     Дан список и кнопка. По нажатию на кнопку посортируйте пункты списка по возрастанию.
     //
-    //     Дан ряд ссылок. Сделайте так, чтобы по нажатию на ссылку она становилась с красным фоном. По нажатию на другую ссылку выделение первой ссылки снимается и выделяется та, на которую мы нажали. В абзац ниже пишите текст активной ссылки.
+    //     Дан ряд ссылок. Сделайте так, чтобы по нажатию на ссылку она становилась с красным фоном.
+    //     По нажатию на другую ссылку выделение первой ссылки снимается и выделяется та, на которую мы нажали. В абзац ниже пишите текст активной ссылки.
     //
 </script>
