--- a/pactice-operation/index.html
+++ b/pactice-operation/index.html
@@ -5,12 +5,25 @@
     <title>Title</title>
 </head>
 <body>
-
-<div style="width: 200px; height: 200px; margin: 0 auto; border: 1px solid black" id="div">
-    <input type="button" id="input1" value="close">
-</div>
-
-
+<!--<div id="div">-->
+<!--<input type="text" id="input1">-->
+<!--<p id="result"></p>-->
+<!--&lt;!&ndash;<input type="submit" id="submit" value="Go!">&ndash;&gt;-->
+<!--</div>-->
+<table>
+    <tr>
+        <td>1</td>
+        <td>3</td>
+        <td>4</td>
+        <td>19</td>
+    </tr>
+    <tr>
+        <td>10</td>
+        <td>11</td>
+        <td>12</td>
+        <td>16</td>
+    </tr>
+</table>
 </body>
 </html>
 
@@ -762,37 +775,118 @@
 
     //
     //     Урок #4
-    //     В инпут через запятую вводятся страны. По нажатию на кнопку сделайте так, чтобы эти страны записались в ul под инпутом (каждая страна отдельный li).
+
+    //     В инпут через запятую вводятся страны.
+    //     По нажатию на кнопку сделайте так, чтобы эти страны записались в ul под инпутом (каждая страна отдельный li).
     //
-    //     В инпут вводится страна и нажимается Enter. По нажатию на Enter сделайте так, чтобы введенные страны записывались в абзац под инпутом через запятую.
+    // var div = document.getElementById('div');
+    // submit.addEventListener("click", function () {
+    //     var arr = firstInput.value.split(',');
+    //     var ul = document.createElement('ul');
+    //     div.appendChild(ul);
+    //
+    //     for (var i = 0; i < arr.length; i++) {
+    //         var li = document.createElement('li');
+    //         li.innerHTML = arr[i];
+    //         ul.appendChild(li);
+    //
+    //     }
+    // })
+
+    //     В инпут вводится страна и нажимается Enter.
+    //     По нажатию на Enter сделайте так, чтобы введенные страны записывались в абзац под инпутом через запятую.
     //     То есть по каждому нажатию Enter в абзац будут добавляться все новые и новые страны.
     //
+    //firstInput.addEventListener("keyup", function (event) {
     //
-    //     На странице есть дивы. В них есть текст. Обойдите все дивы и обрежьте тот текст, который в них стоит так, чтобы он стал длиной 10 символов. И добавьте троеточие в конец обрезанного текста
+    //     if (event.keyCode == 13 && p.innerHTML == '') {
     //
-    //     Дана таблица с числами. По нажатию на кнопку найдите ячейку, в которой хранится максимальное число, и сделайте ее фон красным.
+    //         p.innerHTML = firstInput.value;
+    //         firstInput.value = '';
     //
-    //     Дана таблица с числами. По нажатию на кнопку в инпут под таблицей выведите эти числа через запятую в порядке возрастания.
     //
-    //     Дана таблица с числами. По нажатию на кнопку в последний ряд таблицы в каждую ячейку запишите сумму чисел в столбце таблицы, расположенном над определенной ячейкой.
+    //     } else if (event.keyCode == 13 && p.innerHTML != '') {
     //
-    //     Дана таблица с числами. По нажатию на ячейку она активируется и становится красного цвета. Активировать можно много ячеек. Под таблицей кнопка. По нажатию по этой кнопке в абзац ниже выведите сумма активированных ячеек.
+    //         p.innerHTML = p.innerHTML + ', ' + firstInput.value;
+    //         firstInput.value = '';
+    //
+    //
+    //     }
+    // })
+
+    //     На странице есть дивы.
+    //     В них есть текст. Обойдите все дивы и обрежьте тот текст,
+    //     который в них стоит так, чтобы он стал длиной 10 символов. И добавьте троеточие в конец обрезанного текста
+    //
+    // var div = document.getElementsByTagName('div');
+    //
+    // func(div);
+    //
+    // function func(elem) {
+    //
+    //     for (var i = 0; i < elem.length; i++) {
+    //
+    //         if (elem[i].innerHTML.length > 9) {
+    //
+    //             elem[i].innerHTML = elem[i].innerHTML.slice(1, 10) + '...';
+    //
+    //         }
+    //
+    //     }
+    //
+    // }
+
+    //     Дана таблица с числами. По нажатию на кнопку найдите ячейку, в которой хранится максимальное число,
+    //     и сделайте ее фон красным.
+    //
+    // var td = document.getElementsByTagName('td');
+    // func(td);
+    // function func(elem) {
+    //     var biggest = parseInt(elem[0].innerHTML);
+    //     var num = 0;
+    //
+    //     for (var i = 0; i < elem.length; i++){
+    //
+    //         if (parseInt(td[i].innerHTML) > biggest){
+    //             biggest = parseInt(td[i].innerHTML);
+    //             num = i;
+    //         }
+    //
+    //     }
+    //     elem[num].style.background = 'red';
+    // }
+
+    //     Дана таблица с числами.
+    //     По нажатию на кнопку в инпут под таблицей выведите эти числа через запятую в порядке возрастания.
+    //
+
+    //     Дана таблица с числами. По нажатию на кнопку в последний ряд таблицы в каждую ячейку
+    //     запишите сумму чисел в столбце таблицы, расположенном над определенной ячейкой.
+    //
+    //     Дана таблица с числами. По нажатию на ячейку она активируется и становится красного цвета.
+    //     Активировать можно много ячеек. Под таблицей кнопка.
+    //     По нажатию по этой кнопке в абзац ниже выведите сумма активированных ячеек.
     //     Реализуйте кнопку 'сбросить активированные ячейки'.
     //
-    //     Дана таблица. По нажатию на ячейку в ней появляется инпут с содержимым этой ячейки и кнопка сохранить. Можно поредактировать текст в инпуте, сохранить - и текст ячейки поменяется.
+    //     Дана таблица. По нажатию на ячейку в ней появляется инпут с содержимым этой ячейки и кнопка сохранить.
+    //     Можно поредактировать текст в инпуте, сохранить - и текст ячейки поменяется.
     //
-    //     Реализуйте раскрывающийся список. По умолчанию есть список стран (ul), по нажатию на страну внутри li со страной появляется список городов.
+    //     Реализуйте раскрывающийся список. По умолчанию есть список стран (ul), по нажатию на страну внутри li со страной
+    //     появляется список городов.
     //
     //     Урок #5
-    //     Даны два селекта. В первом находятся страны, во втором - города. Сделайте так, чтобы когда выбирается определенная страна - в другом селекте появлялись города этой страны.
+    //     Даны два селекта. В первом находятся страны, во втором - города.
+    //     Сделайте так, чтобы когда выбирается определенная страна - в другом селекте появлялись города этой страны.
     //     В абзац ниже пишите выбранную страну и город через запятую.
     //
     //
-    //     Сделайте селекты день, мес, год. Сделайте так, чтобы не корректную дату нельзя было выбрать (например, 30 февраля нельзя,
+    //     Сделайте селекты день, мес, год. Сделайте так, чтобы не корректную дату нельзя было выбрать
+    //     (например, 30 февраля нельзя,
     //     а 30 марта можно или 29 февраля можно, но только в високосный год).
     //
     //     Реализуйте калькулятор валют. Есть два селекта - селект с исходной валюты, селект с той валютой,
-    //     в которую мы хотим перевести деньги, инпут, в который вводится сумма для обмена. Курсы валют храните в массиве.
+    //     в которую мы хотим перевести деньги, инпут, в который вводится сумма для обмена.
+    //     Курсы валют храните в массиве.
     //     Сделайте так, чтобы в селектах нельзя было выбрать две одинаковых валюты.
     //
     //     Реализуйте генератор таблиц, ширина и высота таблиц задается в двух инпутах (например, таблица 5 на 10 ячеек).
@@ -800,6 +894,7 @@
     //     Дан список и кнопка. По нажатию на кнопку посортируйте пункты списка по возрастанию.
     //
     //     Дан ряд ссылок. Сделайте так, чтобы по нажатию на ссылку она становилась с красным фоном.
-    //     По нажатию на другую ссылку выделение первой ссылки снимается и выделяется та, на которую мы нажали. В абзац ниже пишите текст активной ссылки.
+    //     По нажатию на другую ссылку выделение первой ссылки снимается и выделяется та,
+    //     на которую мы нажали. В абзац ниже пишите текст активной ссылки.
     //
 </script>
